# PhotoShare

./: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.db  test_comment_repository.py  test_comment_route.py  test_db.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 5796c921ab92_init.py  7a877d2f76cc_init.py  9a2ff8e609f1_init.py  9cf43cc4048a_init.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  photos.py  ratings.py  tags.py  transforms.py  users.py
src/routes/: auth.py  comments.py  photos.py  ratings.py  tags.py  transforms.py  users.py
src/schemas/: comments.py  photos.py  transform.py  users.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: email_template.html
tests/: conftest.py  test_comment.py  test_comment_repository.py  test_main.py  test_repository_comments.py  test_routes_comments.py  utils.py
tests/comment/: test_comment.py
tests/photos/: test.db  test_route_photos.py  unit_test_repository_photos.py
tests/ratings/: test_rating_repository.py  test_rating_routes.py
tests/tags/: tags_repository.py  tags_routes.py  test_tags_repository.py  test_tags_routes.py
tests/test/: test.db  test_repository_user.py  test_route_auth.py  test_route_auth_1.py
tests/transforms/: test.db  test_route_transform.py  unit_test_repository_transform.py
