[tool.poetry]
name = "ps-env"
version = "0.1.0"
description = ""
authors = ["Balorum <Remeshevskyi.Nikita03@gmail.com>"]
readme = "README.md"
packages = [{include = "ps_env"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
libgravatar = "^1.0.4"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
redis = "^5.0.1"
jinja2 = "^3.1.3"
fastapi-limiter = "^0.1.6"
pydantic = {extras = ["email"], version = "^2.6.1"}
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.27"
fastapi-mail = "^1.4.1"
pytest = "^8.0.0"
python-multipart = "^0.0.9"
cloudinary = "^1.38.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-jwt-auth = "^0.5.0"
httpx = "^0.27.0"
pyqrcode = "^1.2.1"
pypng = "^0.20220715.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
sqlalchemy-utils = "^0.41.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
faker = "^23.2.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
